2011-06-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/ver_agente.php: Added callback function
	for JQuery requests.

2011-06-06  Dario Rodriguez  <dario.rodriguez@artica.es>

	* godmode/servers/manage_recontask.php
	godmode/servers/modificar_server.php
	godmode/menu.php: Changed old name functions to 4.0v.

2011-06-06  Dario Rodriguez  <dario.rodriguez@artica.es>

	* godmode/servers/manage_recontask.php: User with flag AW can manage recon
	task, only for their group.
	* godmode/servers/modificar_server.php: User with AW flag can view server
	status but only Pandora Admin can delete one of them.
	* godmode/servers/manage_recontask_form.php: User with flag AW can manage recon
	task, but only for their group.
	* godmode/menu.php: Allowing user with flag AW see manage server tab and 
	manage recon task subtab.

2011-06-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_tags.php: Fixed problem on
	update tag function. 
	* godmode/tag/tag.php
	* godmode/tag/edit_tag.php: Added tab that links to 
	tag list view.

2011-06-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_modules.php: Some mofications over update_tag
	function.
	* include/functions_alerts.php: Added new function 
	alerts_get_alerts_module_name() to retrieve alerts of a module
	in html select tag format.

2011-06-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_tags.php: Added new parameters to function 
	tags_search_tag().

2011-06-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/alert_list.ajax.php: Added new callback function 
	for jQuery requests. 
	* godmode/menu.php: Added alert events entry. 

2011-06-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_tags.php: Some modifications in update tag function.

2011-06-03 Javier Lanz <javier.lanz@artica.es>

	* godmode/agentes/module_manager_editor_prediction.php: Edited to get
	"custom_integer_2" parameter & Added period combo 